fix(input): fix text color on dark mode

--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -1,5 +1,5 @@
 .styled-input {
-    @apply w-full h-full rounded-md transition-colors border border-gray-400 p-2 bg-transparent;
+    @apply w-full h-full rounded-md transition-colors border border-gray-400 p-2 bg-transparent dark:text-white;
 }
 
 .styled-input:not(:focus) {
